Fix vertical centering on mobile room page

--- a/src/Components/MobileOptionPage/SelectRoomPage/MobileRoom/MobileRoom.css
+++ b/src/Components/MobileOptionPage/SelectRoomPage/MobileRoom/MobileRoom.css
@@ -1,9 +1,9 @@
 #MobileRoom {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -100,7 +100,7 @@
 #MobileRoom #search_title {
   width: calc(100% - 40px);
   color: #ffffff;
-  margin-top: 40px;
+  margin-top: 10px;
   
   text-align: left;
   font-size: 50px;
